--- a/app/src/main/res/layout/fragment_currency_conversion.xml
+++ b/app/src/main/res/layout/fragment_currency_conversion.xml
@@ -17,7 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
-                android:inputType="number"/>
+                android:inputType="numberDecimal"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView android:layout_width="match_parent"
