--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="light_blue">#AAAAFF</color>
+    <color name="selected_row">#FFBB00</color>
+    <color name="white">#FFFFFF</color>
 </resources>
