--- a/app/src/main/res/layout/fragment_currency_compare.xml
+++ b/app/src/main/res/layout/fragment_currency_compare.xml
@@ -12,12 +12,22 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/currencies_table"
-            android:layout_width="match_parent"
-            android:layout_marginTop="24dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_height="match_parent"/>
+    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/currencies_table"
+                android:layout_width="match_parent"
+                android:layout_marginTop="24dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_height="match_parent"/>
+        <FrameLayout
+                android:id="@+id/loading_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+        </FrameLayout>
+    </FrameLayout>
 
 </LinearLayout>
