--- a/app/src/main/res/layout/currency_compare_header_item.xml
+++ b/app/src/main/res/layout/currency_compare_header_item.xml
@@ -2,27 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/row_container"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
+              android:layout_height="@dimen/row_height"
               android:orientation="horizontal"
               android:background="@color/light_blue"
+              android:gravity="center_vertical"
 >
 
     <TextView android:id="@+id/date"
               android:textStyle="bold"
               android:layout_width="0dp"
               android:layout_weight="1"
-              android:layout_height="wrap_content"/>
+              android:layout_height="wrap_content"
+              android:gravity="center"/>
 
     <TextView android:id="@+id/first_amount"
               android:textStyle="bold"
               android:layout_width="0dp"
               android:layout_weight="1"
-              android:layout_height="wrap_content"/>
+              android:layout_height="wrap_content"
+              android:gravity="center"/>
 
     <TextView android:id="@+id/second_amount"
               android:textStyle="bold"
               android:layout_width="0dp"
               android:layout_weight="1"
-              android:layout_height="wrap_content"/>
+              android:layout_height="wrap_content"
+              android:gravity="center"/>
 
 </LinearLayout>
