--- a/app/src/main/res/layout/currency_compare_list_item.xml
+++ b/app/src/main/res/layout/currency_compare_list_item.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                            android:id="@+id/row_container"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="wrap_content"
-                                            android:orientation="horizontal">
+              android:id="@+id/row_container"
+              android:layout_width="match_parent"
+              android:layout_height="@dimen/row_height"
+              android:orientation="horizontal"
+              android:gravity="center_vertical">
 
     <TextView android:id="@+id/date"
-            android:layout_width="0dp"
+              android:layout_width="0dp"
               android:layout_weight="1"
-              android:layout_height="wrap_content"/>
+              android:layout_height="wrap_content"
+              android:gravity="center"/>
 
     <TextView android:id="@+id/first_amount"
               android:layout_width="0dp"
               android:layout_weight="1"
-              android:layout_height="wrap_content"/>
+              android:layout_height="wrap_content"
+              android:gravity="center"/>
 
     <TextView android:id="@+id/second_amount"
               android:layout_width="0dp"
               android:layout_weight="1"
-              android:layout_height="wrap_content"/>
+              android:layout_height="wrap_content"
+              android:gravity="center"/>
 
 </LinearLayout>
